syntax = "proto3";
package services;

service StandardService {
  rpc GetPackageStream(StandardRequest) returns (stream StandardResponse);
}

message StandardRequest {
  string serviceId = 1;
  string typeOfPackage = 2;
}

message StandardResponse {
  StandardPackage package = 1;
  CompanyInfo company = 2;
}

message StandardPackage {
  Details detail = 1;
  repeated SubService subServices = 2;
}

message SubService {
  string _id = 1;
  string name = 2;
}

message Details {
  double price = 1;
  double workingHours = 2;
}

message CompanyInfo {
  double latitude = 1;
  double longitude = 2;
  string name = 3;
  string image = 4;
  string contact1 = 5;
  string contact2 = 6;
}